RESOLVED FIXED92544
[EFL][WK2] Assertion hit in ewk_cookie_manager.cpp
https://bugs.webkit.org/show_bug.cgi?id=92544
Summary [EFL][WK2] Assertion hit in ewk_cookie_manager.cpp
Chris Dumez
Reported 2012-07-27 13:54:09 PDT
We sometimes hit the following assertion with the Ewk_Cookie_Manager unit tests in WebKit2 EFL: ASSERTION FAILED: manager->changeHandler.callback /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/API/efl/ewk_cookie_manager.cpp(110) : void cookiesDidChange(WKCookieManagerRef, const void*) 1 0x7f5a88de6ce4 2 0x7f5a88cc21c9 WebKit::WebCookieManagerProxyClient::cookiesDidChange(WebKit::WebCookieManagerProxy*) 3 0x7f5a88cbe119 WebKit::WebCookieManagerProxy::cookiesDidChange() 4 0x7f5a88e0ba03 void CoreIPC::callMemberFunction<WebKit::WebCookieManagerProxy, void (WebKit::WebCookieManagerProxy::*)()>(CoreIPC::Arguments0 const&, WebKit::WebCookieManagerProxy*, void (WebKit::WebCookieManagerProxy::*)()) 5 0x7f5a88e0b8ab void CoreIPC::handleMessage<Messages::WebCookieManagerProxy::CookiesDidChange, WebKit::WebCookieManagerProxy, void (WebKit::WebCookieManagerProxy::*)()>(CoreIPC::ArgumentDecoder*, WebKit::WebCookieManagerProxy*, void (WebKit::WebCookieManagerProxy::*)()) 6 0x7f5a88e0b6f1 WebKit::WebCookieManagerProxy::didReceiveWebCookieManagerProxyMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) 7 0x7f5a88cbdcdc WebKit::WebCookieManagerProxy::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) 8 0x7f5a88cacd36 WebKit::WebContext::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) 9 0x7f5a88d16d9c WebKit::WebProcessProxy::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) 10 0x7f5a88ca51b7 WebKit::WebConnectionToWebProcess::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*) 11 0x7f5a88c4f31b CoreIPC::Connection::dispatchMessage(CoreIPC::Connection::Message<CoreIPC::ArgumentDecoder>&) 12 0x7f5a88c4f4b9 CoreIPC::Connection::dispatchOneMessage() 13 0x7f5a88c593ac WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>::operator()(CoreIPC::Connection*) 14 0x7f5a88c591b2 WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>, void (CoreIPC::Connection*)>::operator()() 15 0x45e570 WTF::Function<void ()>::operator()() const 16 0x7f5a83452453 WebCore::RunLoop::performWork() 17 0x7f5a83d8f62b WebCore::RunLoop::wakeUpEvent(void*, void*, unsigned int) 18 0x7f5a89330061 19 0x7f5a8932f131 20 0x7f5a8932f5d5 ecore_main_loop_iterate 21 0x4681ef EWK2UnitTest::EWK2UnitTestBase::loadUrlSync(char const*) 22 0x42ddb8 EWK2UnitTestBase_ewk_cookie_manager_changes_watch_Test::TestBody() 23 0x7f5a8850a04d testing::Test::Run() 24 0x7f5a8850a671 testing::internal::TestInfoImpl::Run() 25 0x7f5a8850abe2 testing::TestCase::Run() 26 0x7f5a8850f5ae testing::internal::UnitTestImpl::RunAllTests() 27 0x7f5a8850e32c testing::UnitTest::Run() 28 0x468b12 main 29 0x7f5a8718c76d __libc_start_main
Attachments
Patch (1.44 KB, patch)
2012-07-27 13:58 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-07-27 13:58:13 PDT
WebKit Review Bot
Comment 2 2012-07-27 16:12:49 PDT
Comment on attachment 155044 [details] Patch Clearing flags on attachment: 155044 Committed r123933: <http://trac.webkit.org/changeset/123933>
WebKit Review Bot
Comment 3 2012-07-27 16:12:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.