[EFL][WK2] Assertion hit in ewk_cookie_manager.cpp https://bugs.webkit.org/show_bug.cgi?id=92544

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-27
Reviewed by Kenneth Rohde Christiansen.

Removed wrong assertion in ewk_cookie_manager.cpp
and replace it by an if check. The assertion was
sometimes hit by our unit tests.

* UIProcess/API/efl/ewk_cookie_manager.cpp:
(cookiesDidChange):

Canonical link: https://commits.webkit.org/110367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123933 268f45cc-cd09-0410-ab3c-d52691b4dbfc